--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/40f599c5db.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -27,6 +31,7 @@
       jnsdjsfjfsjfsjsfklmsklsfjkhskjdnflkandlkasdlkdnakf n lnsjfbjla jafdkjae
       jhhajf k jbakf kadfkjbknadfjl kjadhfiuhajd kuuhadfb ku
     </p>
+    <i class="fa-brands fa-github"></i>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
