--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,20 +20,23 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/40f599c5db.js"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <h1>My first portfolio</h1>
-    <h2>Muriel Sánchez Laguna</h2>
-    <p>
-      jnsdjsfjfsjfsjsfklmsklsfjkhskjdnflkandlkasdlkdnakf n lnsjfbjla jafdkjae
-      jhhajf k jbakf kadfkjbknadfjl kjadhfiuhajd kuuhadfb ku
-    </p>
-    <i class="fa-brands fa-github"></i>
+    <div class="container">
+      <section class="introduction">
+        <h3>👋🏽 Hello, I am</h3>
+        <h1>Muriel<br />Sánchez Laguna</h1>
+        <h2>🇵🇦 Front-end developer based in Europe</h2>
+        <button class="primary-button">CONTACT ME</button>
+      </section>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
