Added the color pallete

--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <section class="introduction">
-        <h3>👋🏽 Hello, I am</h3>
-        <h1>Muriel<br />Sánchez Laguna</h1>
-        <h2>🇵🇦 Front-end developer based in Europe</h2>
-        <button class="primary-button">CONTACT ME</button>
-      </section>
-    </div>
+    <section class="introduction">
+      <h3>👋🏽 Hello, I am</h3>
+      <h1>Muriel<br />Sánchez Laguna</h1>
+      <h2>🇵🇦 Front-end developer based in Europe</h2>
+      <a href="#" class="btn primary-button">CONTACT ME</a>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
