--- a/index.html
+++ b/index.html
@@ -29,86 +29,89 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <section class="introduction">
-      <h3>👋🏽 Hello, I am</h3>
-      <h1>Muriel<br />Sánchez Laguna</h1>
-      <h2>🇵🇦 Front-end developer based in Europe</h2>
-      <a href="#" class="btn primary-button">CONTACT ME</a>
-    </section>
-    <section class="section-introductions">
-      <a href="/index.html#featured-project"
-        >Take a look at my best projects<br />↡</a
-      >
-    </section>
-    <main id="featured-project" class="featured-project">
-      <div class="container mt-5">
-        <div class="row mb-5">
-          <div class="col-sm-6">
-            <img
-              src="/images/AI Bare Pantry Chef.png"
-              alt="View of 'AI Bare Pantry Chef'"
-              class="img-fluid rounded p-2"
-            />
+    <div class="w-100">
+      <section class="introduction">
+        <h3>👋🏽 Hello, I am</h3>
+        <h1>Muriel<br />Sánchez Laguna</h1>
+        <h2>🇵🇦 Front-end developer based in Europe</h2>
+        <a href="#" class="btn primary-button">CONTACT ME</a>
+      </section>
+      <section class="section-introductions">
+        <a href="/index.html#featured-project"
+          >Take a look at my best projects<br />↡</a
+        >
+      </section>
+      <main id="featured-project" class="featured-project">
+        <div class="container mt-5">
+          <div class="row mb-5">
+            <div class="col-sm-6">
+              <img
+                src="/images/AI Bare Pantry Chef.png"
+                alt="View of 'AI Bare Pantry Chef'"
+                class="img-fluid rounded p-2"
+              />
+            </div>
+            <div class="col-sm-6">
+              <h6 class="mt-3 mb-4">AI Bare Pantry Chef 🍽️👩‍🍳</h6>
+              <p>
+                Discover the convenience of the AI Bare Pantry Chef, an
+                innovative web application designed to transform your cooking
+                experience. Utilizing AI, this app helps you create delicious
+                recipes with the ingredients you have on hand. Say goodbye to
+                food waste and hello to culinary creativity! Explore
+                user-friendly features and an intuitive design that makes meal
+                planning a breeze.
+              </p>
+              <a href="#">Learn more →</a>
+            </div>
           </div>
-          <div class="col-sm-6">
-            <h6 class="mt-3 mb-4">AI Bare Pantry Chef 🍽️👩‍🍳</h6>
-            <p>
-              Discover the convenience of the AI Bare Pantry Chef, an innovative
-              web application designed to transform your cooking experience.
-              Utilizing AI, this app helps you create delicious recipes with the
-              ingredients you have on hand. Say goodbye to food waste and hello
-              to culinary creativity! Explore user-friendly features and an
-              intuitive design that makes meal planning a breeze.
-            </p>
-            <a href="#">Learn more →</a>
+
+          <div class="row mb-5">
+            <div class="col-sm-6">
+              <h6 class="mt-3 mb-4">Family World Clock</h6>
+              <p>
+                Stay connected with family and friends around the globe using
+                the Family World Clock. This web application provides accurate,
+                real-time time zone information, ensuring you never miss a
+                moment with your loved ones. With its sleek design and easy
+                navigation, managing different time zones has never been
+                simpler.
+              </p>
+              <a href="#">Learn more →</a>
+            </div>
+            <div class="col-sm-6">
+              <img
+                src="/images/Family World Clock.png"
+                alt="View of 'Family world clock'"
+                class="img-fluid rounded p-2"
+              />
+            </div>
+          </div>
+
+          <div class="row mb-5">
+            <div class="col-sm-6">
+              <img
+                src="/images/Weather Forecast.png"
+                alt="View of 'Weather forecast'"
+                class="img-fluid rounded p-2"
+              />
+            </div>
+            <div class="col-sm-6">
+              <h6 class="mt-3 mb-4">Weather Forecast</h6>
+              <p>
+                Stay ahead of the weather with the Weather Forecast app. This
+                user-friendly web application provides accurate and up-to-date
+                weather information for any location. With a clean design and
+                intuitive interface, checking current conditions, hourly
+                updates, and extended forecasts is quick and easy, ensuring
+                you're always prepared for whatever Mother Nature has in store.
+              </p>
+              <a href="#">Learn more →</a>
+            </div>
           </div>
         </div>
-
-        <div class="row mb-5">
-          <div class="col-sm-6">
-            <h6 class="mt-3 mb-4">Family World Clock</h6>
-            <p>
-              Stay connected with family and friends around the globe using the
-              Family World Clock. This web application provides accurate,
-              real-time time zone information, ensuring you never miss a moment
-              with your loved ones. With its sleek design and easy navigation,
-              managing different time zones has never been simpler.
-            </p>
-            <a href="#">Learn more →</a>
-          </div>
-          <div class="col-sm-6">
-            <img
-              src="/images/Family World Clock.png"
-              alt="View of 'Family world clock'"
-              class="img-fluid rounded p-2"
-            />
-          </div>
-        </div>
-
-        <div class="row mb-5">
-          <div class="col-sm-6">
-            <img
-              src="/images/Weather Forecast.png"
-              alt="View of 'Weather forecast'"
-              class="img-fluid rounded p-2"
-            />
-          </div>
-          <div class="col-sm-6">
-            <h6 class="mt-3 mb-4">Weather Forecast</h6>
-            <p>
-              Stay ahead of the weather with the Weather Forecast app. This
-              user-friendly web application provides accurate and up-to-date
-              weather information for any location. With a clean design and
-              intuitive interface, checking current conditions, hourly updates,
-              and extended forecasts is quick and easy, ensuring you're always
-              prepared for whatever Mother Nature has in store.
-            </p>
-            <a href="#">Learn more →</a>
-          </div>
-        </div>
-      </div>
-    </main>
-
+      </main>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
