Responsive for smaller devices

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="w-100">
       <section class="introduction">
         <h3>👋🏽 Hello, I am</h3>
-        <h1>Muriel<br />Sánchez Laguna</h1>
+        <h1>Muriel<br /><small>Sánchez Laguna</small></h1>
         <h2>🇵🇦 Front-end developer based in Europe</h2>
         <a href="#" class="btn primary-button">CONTACT ME</a>
       </section>
