Responsive for small devices
featured project section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
       <main id="featured-project" class="featured-project">
         <div class="container mt-5">
           <div class="row mb-5">
-            <div class="col-sm-6">
+            <div
+              class="col-sm-6"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
               <img
                 src="/images/AI Bare Pantry Chef.png"
                 alt="View of 'AI Bare Pantry Chef'"
@@ -79,7 +86,14 @@
               </p>
               <a href="#">Learn more →</a>
             </div>
-            <div class="col-sm-6">
+            <div
+              class="col-sm-6"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
               <img
                 src="/images/Family World Clock.png"
                 alt="View of 'Family world clock'"
@@ -89,7 +103,14 @@
           </div>
 
           <div class="row mb-5">
-            <div class="col-sm-6">
+            <div
+              class="col-sm-6"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
               <img
                 src="/images/Weather Forecast.png"
                 alt="View of 'Weather forecast'"
