--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script
       src="https://kit.fontawesome.com/40f599c5db.js"
       crossorigin="anonymous"
@@ -132,6 +135,54 @@
           </div>
         </div>
       </main>
+      <footer>
+        <div class="floating-media-trio">
+          <div class="floating-media-unit">
+            <a
+              href="https://github.com/MurielCristina?tab=overview&from=2024-07-01&to=2024-07-23"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i><br />GitHub</a
+            >
+          </div>
+          <div class="floating-media-unit">
+            <a
+              href="https://app.netlify.com/teams/murielcristina/sites"
+              target="_blank"
+              ><i class="fa-solid fa-globe"></i><br />Netlify</a
+            >
+          </div>
+          <div class="floating-media-unit">
+            <a
+              href="https://www.shecodes.io/graduates/135313-muriel-cristina-sanchez-laguna"
+              target="_blank"
+              ><i class="fa-solid fa-school"></i><br />SheCodes</a
+            >
+          </div>
+        </div>
+        <p class="mb-0 pb-5">
+          This page was coded by
+
+          <a href="https://github.com/MurielCristina" target="_blank"> Muri </a
+          ><img
+            src="/images/Designer.png"
+            alt="Muri logo"
+            class="img-fluid"
+            width="15"
+          />
+          and is
+          <a
+            href="https://github.com/MurielCristina/Personal-Portfolio"
+            target="_blank"
+            >open sourced at GitHub</a
+          >
+          and is hosted at
+          <a
+            href="https://app.netlify.com/sites/muri-portfolio/overview"
+            target="_blank"
+            >Netlify</a
+          >
+        </p>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
