--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div class="w-100">
-      <nav class="navbar navbar-expand-sm bg-body-tertiary">
+      <nav class="fixed-top navbar navbar-expand-sm bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img
@@ -56,7 +56,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="nav nav-underline">
+              >
               <li class="nav-item">
                 <a
                   class="nav-link active"
