Created about.html page with basic content

--- a/about.html
+++ b/about.html
@@ -79,108 +79,49 @@
           </div>
         </div>
       </nav>
+
       <section class="introduction">
-        <h3>👋🏽 Hello, I am</h3>
-        <h1>Muriel<br /><small>Sánchez Laguna</small></h1>
-        <h2>🇵🇦 Front-end developer based in Europe</h2>
-        <a href="#" class="btn primary-button">CONTACT ME</a>
-      </section>
-      <section class="section-introductions">
-        <a href="/index.html#featured-project"
-          >Take a look at my best projects<br />↡</a
-        >
-      </section>
-      <main id="featured-project" class="featured-project">
-        <div class="container mt-5">
-          <div class="row mb-5">
-            <div
-              class="col-sm-6"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              "
-            >
-              <img
-                src="/images/AI Bare Pantry Chef.png"
-                alt="View of 'AI Bare Pantry Chef'"
-                class="img-fluid rounded p-2"
-              />
-            </div>
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">AI Bare Pantry Chef 🍽️👩‍🍳</h6>
-              <p>
-                Discover the convenience of the AI Bare Pantry Chef, an
-                innovative web application designed to transform your cooking
-                experience. Utilizing AI, this app helps you create delicious
-                recipes with the ingredients you have on hand. Say goodbye to
-                food waste and hello to culinary creativity! Explore
-                user-friendly features and an intuitive design that makes meal
-                planning a breeze.
-              </p>
-              <a href="#">Learn more →</a>
-            </div>
+        <h3>About me:</h3>
+        <h1>Muriel Sánchez Laguna</h1>
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="/images/PP.jpeg"
+              alt="profile picture"
+              class="img-fluid rounded p-2"
+            />
           </div>
-
-          <div class="row mb-5">
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">Family World Clock</h6>
+          <div class="col-sm-8">
+            <div>
+              <a href="#" class="btn primary-button">CONTACT ME</a>
+              <a href="#" class="btn primary-button">CV<br />Español</a>
+              <a href="#" class="btn primary-button">CV<br />English</a>
+            </div>
+            <div>
               <p>
-                Stay connected with family and friends around the globe using
-                the Family World Clock. This web application provides accurate,
-                real-time time zone information, ensuring you never miss a
-                moment with your loved ones. With its sleek design and easy
-                navigation, managing different time zones has never been
-                simpler.
+                👩🏽‍💻 Front-end developer jr.<br />👩🏽‍💼 Master in Project
+                Management<br />👷🏽‍♀️ Electromechanical Engineer
               </p>
-              <a href="#">Learn more →</a>
-            </div>
-            <div
-              class="col-sm-6"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              "
-            >
-              <img
-                src="/images/Family World Clock.png"
-                alt="View of 'Family world clock'"
-                class="img-fluid rounded p-2"
-              />
-            </div>
-          </div>
-
-          <div class="row mb-5">
-            <div
-              class="col-sm-6"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              "
-            >
-              <img
-                src="/images/Weather Forecast.png"
-                alt="View of 'Weather forecast'"
-                class="img-fluid rounded p-2"
-              />
-            </div>
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">Weather Forecast</h6>
-              <p>
-                Stay ahead of the weather with the Weather Forecast app. This
-                user-friendly web application provides accurate and up-to-date
-                weather information for any location. With a clean design and
-                intuitive interface, checking current conditions, hourly
-                updates, and extended forecasts is quick and easy, ensuring
-                you're always prepared for whatever Mother Nature has in store.
-              </p>
-              <a href="#">Learn more →</a>
             </div>
           </div>
         </div>
+      </section>
+      <main>
+        <p>
+          Hello! I'm Muri, an electromechanical engineer with a master's degree
+          in project management, now thriving as a front-end developer. With a
+          strong foundation in engineering and extensive experience in managing
+          complex projects, I bring a unique blend of technical and managerial
+          skills to the table. My passion for coding and creating seamless user
+          experiences drives my work as a front-end developer. I am eager to
+          leverage my diverse skill set in remote roles, whether in IT project
+          management or front-end development, to deliver innovative solutions
+          and drive success in dynamic projects. My goal is to create impactful
+          digital experiences while ensuring project goals are met efficiently
+          and effectively.
+        </p>
       </main>
+
       <footer>
         <div class="floating-media-trio">
           <div class="floating-media-unit">
