css for about.html done
-full screen and small devices

--- a/about.html
+++ b/about.html
@@ -80,47 +80,55 @@
         </div>
       </nav>
 
-      <section class="introduction">
+      <section class="about-me">
         <h3>About me:</h3>
-        <h1>Muriel Sánchez Laguna</h1>
+        <h1>Muriel<br /><small>Sánchez Laguna</small></h1>
         <div class="row">
           <div class="col-sm-4">
             <img
               src="/images/PP.jpeg"
               alt="profile picture"
-              class="img-fluid rounded p-2"
+              class="profile-pic img-fluid rounded p-2 border p-2 w-60"
             />
           </div>
-          <div class="col-sm-8">
-            <div>
-              <a href="#" class="btn primary-button">CONTACT ME</a>
-              <a href="#" class="btn primary-button">CV<br />Español</a>
-              <a href="#" class="btn primary-button">CV<br />English</a>
-            </div>
-            <div>
-              <p>
+          <div
+            class="col-sm-8"
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
+            <div class="titles">
+              <p class="text-start">
                 👩🏽‍💻 Front-end developer jr.<br />👩🏽‍💼 Master in Project
                 Management<br />👷🏽‍♀️ Electromechanical Engineer
               </p>
             </div>
+            <div>
+              <a href="#" class="btn primary-button">CONTACT ME</a>
+              <a href="#" class="btn secondary-button">CV<br />Español</a>
+              <a href="#" class="btn secondary-button">CV<br />English</a>
+            </div>
           </div>
         </div>
+        <div class="personal-description">
+          <p>
+            Hello! I'm Muri, an electromechanical engineer with a master's
+            degree in project management, now thriving as a front-end developer.
+            With a strong foundation in engineering and extensive experience in
+            managing complex projects, I bring a unique blend of technical and
+            managerial skills to the table. My passion for coding and creating
+            seamless user experiences drives my work as a front-end developer. I
+            am eager to leverage my diverse skill set in remote roles, whether
+            in IT project management or front-end development, to deliver
+            innovative solutions and drive success in dynamic projects. My goal
+            is to create impactful digital experiences while ensuring project
+            goals are met efficiently and effectively.
+          </p>
+        </div>
       </section>
-      <main>
-        <p>
-          Hello! I'm Muri, an electromechanical engineer with a master's degree
-          in project management, now thriving as a front-end developer. With a
-          strong foundation in engineering and extensive experience in managing
-          complex projects, I bring a unique blend of technical and managerial
-          skills to the table. My passion for coding and creating seamless user
-          experiences drives my work as a front-end developer. I am eager to
-          leverage my diverse skill set in remote roles, whether in IT project
-          management or front-end development, to deliver innovative solutions
-          and drive success in dynamic projects. My goal is to create impactful
-          digital experiences while ensuring project goals are met efficiently
-          and effectively.
-        </p>
-      </main>
 
       <footer>
         <div class="floating-media-trio">
