basic html structure for myprojects.html

--- a/myprojects.html
+++ b/myprojects.html
@@ -70,7 +70,7 @@
                 <a class="nav-link" href="/about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">My projects</a>
+                <a class="nav-link" href="/myprojects.html">My projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -82,25 +82,39 @@
 
       <section class="about-me">
         <h1 class="text-start">My work</h1>
-        <h3 class="text-start">
+        <h3 class="text-start mb-5">
           Discover the projects I've been passionately developing.
         </h3>
         <a href="#" class="btn primary-button">CONTACT ME</a>
       </section>
 
-      <div class="projects-display">
+      <div class="container projects-display">
         <h4 class="text-center">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
-        <img src="" alt="" />
-        <p>
-          Discover the convenience of the AI Bare Pantry Chef, an innovative web
-          application designed to transform your cooking experience. Utilizing
-          AI, this app helps you create delicious recipes with the ingredients
-          you have on hand. Say goodbye to food waste and hello to culinary
-          creativity! Explore user-friendly features and an intuitive design
-          that makes meal planning a breeze. Tools: HTML, CSS, JavaScript, VS
-          Code, Git, GitHub, Hosting, API, AI.
-        </p>
-        <a href="#">Launch project →</a>
+        <div class="row">
+          <div class="col-sm-5">
+            <img
+              src="/images/AI Bare Pantry Chef.png"
+              alt="View of 'AI Bare Pantry Chef'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-7">
+            <p>
+              Discover the convenience of the AI Bare Pantry Chef, an innovative
+              web application designed to transform your cooking experience.
+              Utilizing AI, this app helps you create delicious recipes with the
+              ingredients you have on hand. Say goodbye to food waste and hello
+              to culinary creativity! Explore user-friendly features and an
+              intuitive design that makes meal planning a breeze.<br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, API, AI.</small
+              >
+            </p>
+            <a href="#">Launch project →</a>
+          </div>
+        </div>
       </div>
 
       <footer>
