--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 <a class="nav-link" href="/about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">My projects</a>
+                <a class="nav-link" href="/myprojects.html">My projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
