finish styling myprojects.html
-only for large screens

--- a/myprojects.html
+++ b/myprojects.html
@@ -87,18 +87,52 @@
         </h3>
         <a href="#" class="btn primary-button">CONTACT ME</a>
       </section>
-
+      <!-- PROYECT DISPLAY (start)-->
       <div class="container projects-display">
-        <h4 class="text-center">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
+        <h4 class="text-center mb-5">Muriel Sánchez Laguna Portfolio</h4>
         <div class="row">
-          <div class="col-sm-5">
+          <div class="col-sm-4">
+            <img
+              src="/images/MSL portfolio.png"
+              alt="View of 'Muriel Sánchez Laguna Portfolio'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-8">
+            <p>
+              Explore the professional journey and diverse skill set of Muriel
+              Sánchez Laguna through this comprehensive portfolio. Showcasing a
+              blend of engineering expertise, project management acumen, and
+              front-end development prowess, this portfolio highlights key
+              projects and achievements. Discover the passion and dedication
+              behind each creation, and see how Muriel combines technical
+              proficiency with creative problem-solving.
+              <br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, API, SEO, Bootstrap, responsive.</small
+              >
+            </p>
+            <a href="https://muri-portfolio.netlify.app/" target="_blank"
+              >Launch project →</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- PROYECT DISPLAY (end)-->
+      <!-- PROYECT DISPLAY (start)-->
+      <div class="container projects-display">
+        <h4 class="text-center mb-5">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
+        <div class="row">
+          <div class="col-sm-4">
             <img
               src="/images/AI Bare Pantry Chef.png"
               alt="View of 'AI Bare Pantry Chef'"
               class="img-fluid rounded p-2"
             />
           </div>
-          <div class="col-sm-7">
+          <div class="col-sm-8">
             <p>
               Discover the convenience of the AI Bare Pantry Chef, an innovative
               web application designed to transform your cooking experience.
@@ -112,11 +146,116 @@
                 Hosting, API, AI.</small
               >
             </p>
-            <a href="#">Launch project →</a>
+            <a href="https://bare-pantry-chef.netlify.app/ " target="_blank"
+              >Launch project →</a
+            >
           </div>
         </div>
       </div>
-
+      <!-- PROYECT DISPLAY (end)-->
+      <!-- PROYECT DISPLAY (start)-->
+      <div class="container projects-display">
+        <h4 class="text-center mb-5">Family World Clock</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="/images/Family World Clock.png"
+              alt="View of 'Family World Clock'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-8">
+            <p>
+              Stay connected with family and friends around the globe using the
+              Family World Clock. This web application provides accurate,
+              real-time time zone information, ensuring you never miss a moment
+              with your loved ones. With its sleek design and easy navigation,
+              managing different time zones has never been simpler.
+              <br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, API.</small
+              >
+            </p>
+            <a
+              href="https://world-clock-codedbymuri.netlify.app/"
+              target="_blank"
+              >Launch project →</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- PROYECT DISPLAY (end)-->
+      <!-- PROYECT DISPLAY (start)-->
+      <div class="container projects-display">
+        <h4 class="text-center mb-5">Weather Forecast</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="/images/Weather Forecast.png"
+              alt="View of 'Weather Forecast'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-8">
+            <p>
+              Stay ahead of the weather with the Weather Forecast app. This
+              user-friendly web application provides accurate and up-to-date
+              weather information for any location. With a clean design and
+              intuitive interface, checking current conditions, hourly updates,
+              and extended forecasts is quick and easy, ensuring you're always
+              prepared for whatever Mother Nature has in store.
+              <br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, API.</small
+              >
+            </p>
+            <a
+              href="https://vanilla-weather-forecast-codedbymuri.netlify.app/"
+              target="_blank"
+              >Launch project →</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- PROYECT DISPLAY (end)-->
+      <!-- PROYECT DISPLAY (start)-->
+      <div class="container projects-display">
+        <h4 class="text-center mb-5">Vanilla Weather Search</h4>
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              src="/images/Vanilla Weather Search.png"
+              alt="View of 'Vanilla Weather Search'"
+              class="img-fluid rounded p-2"
+            />
+          </div>
+          <div class="col-sm-8">
+            <p>
+              Experience the simplicity and efficiency of Vanilla Weather
+              Search, a streamlined web application designed to provide accurate
+              weather updates. With a clean and intuitive interface, this app
+              allows you to quickly search for current weather conditions,
+              forecasts, and more, ensuring you stay informed and prepared.
+              <br />
+              <br />
+              <small
+                >Built with: HTML, CSS, JavaScript, VS Code, Git, GitHub,
+                Hosting, API.</small
+              >
+            </p>
+            <a
+              href="https://vanilla-weather-seach-codedbymuri.netlify.app/"
+              target="_blank"
+              >Launch project →</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- PROYECT DISPLAY (end)-->
       <footer>
         <div class="floating-media-trio">
           <div class="floating-media-unit">
