myproject.html small devices friendly

--- a/myprojects.html
+++ b/myprojects.html
@@ -87,9 +87,9 @@
         </h3>
         <a href="#" class="btn primary-button">CONTACT ME</a>
       </section>
-      <!-- PROYECT DISPLAY (start)-->
-      <div class="container projects-display">
-        <h4 class="text-center mb-5">Muriel Sánchez Laguna Portfolio</h4>
+      <!-- 1. PROYECT DISPLAY (start)-->
+      <div class="projects-display">
+        <h4 class="text-center">Muriel Sánchez Laguna Portfolio</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
@@ -122,8 +122,8 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="container projects-display">
-        <h4 class="text-center mb-5">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
+      <div class="projects-display">
+        <h4 class="text-center">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
@@ -154,8 +154,8 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="container projects-display">
-        <h4 class="text-center mb-5">Family World Clock</h4>
+      <div class="projects-display">
+        <h4 class="text-center">Family World Clock</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
@@ -188,8 +188,8 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="container projects-display">
-        <h4 class="text-center mb-5">Weather Forecast</h4>
+      <div class="projects-display">
+        <h4 class="text-center">Weather Forecast</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
@@ -223,8 +223,8 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="container projects-display">
-        <h4 class="text-center mb-5">Vanilla Weather Search</h4>
+      <div class="projects-display">
+        <h4 class="text-center">Vanilla Weather Search</h4>
         <div class="row">
           <div class="col-sm-4">
             <img
