Link projects display into myprojects

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <img
                 src="/images/AI Bare Pantry Chef.png"
                 alt="View of 'AI Bare Pantry Chef'"
-                class="img-fluid rounded p-2"
+                class="img-fluid rounded p-2 d-none d-sm-block"
               />
             </div>
             <div class="col-sm-6">
@@ -118,7 +118,7 @@
                 user-friendly features and an intuitive design that makes meal
                 planning a breeze.
               </p>
-              <a href="#">Learn more →</a>
+              <a href="/myprojects.html#best-project1">Learn more →</a>
             </div>
           </div>
 
@@ -133,7 +133,7 @@
                 navigation, managing different time zones has never been
                 simpler.
               </p>
-              <a href="#">Learn more →</a>
+              <a href="/myprojects.html#best-project2">Learn more →</a>
             </div>
             <div
               class="col-sm-6"
@@ -146,7 +146,7 @@
               <img
                 src="/images/Family World Clock.png"
                 alt="View of 'Family world clock'"
-                class="img-fluid rounded p-2"
+                class="img-fluid rounded p-2 d-none d-sm-block"
               />
             </div>
           </div>
@@ -163,7 +163,7 @@
               <img
                 src="/images/Weather Forecast.png"
                 alt="View of 'Weather forecast'"
-                class="img-fluid rounded p-2"
+                class="img-fluid rounded p-2 d-none d-sm-block"
               />
             </div>
             <div class="col-sm-6">
@@ -176,7 +176,7 @@
                 updates, and extended forecasts is quick and easy, ensuring
                 you're always prepared for whatever Mother Nature has in store.
               </p>
-              <a href="#">Learn more →</a>
+              <a href="/myprojects.html#best-project3">Learn more →</a>
             </div>
           </div>
         </div>
