--- a/myprojects.html
+++ b/myprojects.html
@@ -122,7 +122,7 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="projects-display">
+      <div class="projects-display" id="best-project1">
         <h4 class="text-center">AI Bare Pantry Chef 🍽️👩‍🍳</h4>
         <div class="row">
           <div class="col-sm-4">
@@ -154,7 +154,7 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="projects-display">
+      <div class="projects-display" id="best-project2">
         <h4 class="text-center">Family World Clock</h4>
         <div class="row">
           <div class="col-sm-4">
@@ -188,7 +188,7 @@
       </div>
       <!-- PROYECT DISPLAY (end)-->
       <!-- PROYECT DISPLAY (start)-->
-      <div class="projects-display">
+      <div class="projects-display" id="best-project3">
         <h4 class="text-center">Weather Forecast</h4>
         <div class="row">
           <div class="col-sm-4">
