--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 <a class="nav-link" href="/myprojects.html">My projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="/contact.html">Contact</a>
               </li>
             </ul>
           </div>
