--- a/contact.html
+++ b/contact.html
@@ -79,108 +79,42 @@
           </div>
         </div>
       </nav>
-      <section class="introduction">
-        <h3>👋🏽 Hello, I am</h3>
-        <h1>Muriel<br /><small>Sánchez Laguna</small></h1>
-        <h2>🇵🇦 Front-end developer based in Europe</h2>
-        <a href="#" class="btn primary-button">CONTACT ME</a>
-      </section>
-      <section class="section-introductions">
-        <a href="/index.html#featured-project"
-          >Take a look at my best projects<br />↡</a
-        >
-      </section>
-      <main id="featured-project" class="featured-project">
-        <div class="container mt-5">
-          <div class="row mb-5">
-            <div
-              class="col-sm-6"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              "
-            >
-              <img
-                src="/images/AI Bare Pantry Chef.png"
-                alt="View of 'AI Bare Pantry Chef'"
-                class="img-fluid rounded p-2 d-none d-sm-block"
-              />
-            </div>
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">AI Bare Pantry Chef 🍽️👩‍🍳</h6>
-              <p>
-                Discover the convenience of the AI Bare Pantry Chef, an
-                innovative web application designed to transform your cooking
-                experience. Utilizing AI, this app helps you create delicious
-                recipes with the ingredients you have on hand. Say goodbye to
-                food waste and hello to culinary creativity! Explore
-                user-friendly features and an intuitive design that makes meal
-                planning a breeze.
-              </p>
-              <a href="/myprojects.html#best-project1">Learn more →</a>
-            </div>
-          </div>
 
-          <div class="row mb-5">
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">Family World Clock</h6>
-              <p>
-                Stay connected with family and friends around the globe using
-                the Family World Clock. This web application provides accurate,
-                real-time time zone information, ensuring you never miss a
-                moment with your loved ones. With its sleek design and easy
-                navigation, managing different time zones has never been
-                simpler.
-              </p>
-              <a href="/myprojects.html#best-project2">Learn more →</a>
-            </div>
-            <div
-              class="col-sm-6"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              "
-            >
-              <img
-                src="/images/Family World Clock.png"
-                alt="View of 'Family world clock'"
-                class="img-fluid rounded p-2 d-none d-sm-block"
-              />
-            </div>
-          </div>
+      <section class="about-me contact-me" id="contact-me">
+        <h1 class="text-start">Let's get in touch!</h1>
 
-          <div class="row mb-5">
-            <div
-              class="col-sm-6"
-              style="
-                display: flex;
-                align-items: center;
-                justify-content: center;
-              "
+        <div class="titles">
+          <p class="text-start">Contact:</p>
+          <div>
+            <i class="fa-regular fa-envelope"></i>
+            <a href="mailto:mcsanchezlaguna@gmail.com" target="_blank"
+              >mcsanchezlaguna@gmail.com</a
             >
-              <img
-                src="/images/Weather Forecast.png"
-                alt="View of 'Weather forecast'"
-                class="img-fluid rounded p-2 d-none d-sm-block"
-              />
-            </div>
-            <div class="col-sm-6">
-              <h6 class="mt-3 mb-4">Weather Forecast</h6>
-              <p>
-                Stay ahead of the weather with the Weather Forecast app. This
-                user-friendly web application provides accurate and up-to-date
-                weather information for any location. With a clean design and
-                intuitive interface, checking current conditions, hourly
-                updates, and extended forecasts is quick and easy, ensuring
-                you're always prepared for whatever Mother Nature has in store.
-              </p>
-              <a href="/myprojects.html#best-project3">Learn more →</a>
-            </div>
+          </div>
+          <div>
+            <i class="fa-solid fa-mobile-screen-button"></i>
+            <p>(🇪🇸+34) 648 440 317</p>
           </div>
         </div>
-      </main>
+        <div class="titles">
+          <p class="text-start">Conect:</p>
+          <div>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/in/murielsanchezlaguna/"
+              target="_blank"
+              >Muriel Cristina Sánchez Laguna</a
+            >
+          </div>
+          <div>
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/muricristinapty/" target="_blank"
+              >@murielcristinapty</a
+            >
+          </div>
+        </div>
+      </section>
+
       <footer>
         <div class="floating-media-trio">
           <div class="floating-media-unit">
