Style the contact page
-for big screens

--- a/contact.html
+++ b/contact.html
@@ -80,37 +80,54 @@
         </div>
       </nav>
 
-      <section class="about-me contact-me" id="contact-me">
-        <h1 class="text-start">Let's get in touch!</h1>
-
-        <div class="titles">
-          <p class="text-start">Contact:</p>
-          <div>
-            <i class="fa-regular fa-envelope"></i>
-            <a href="mailto:mcsanchezlaguna@gmail.com" target="_blank"
-              >mcsanchezlaguna@gmail.com</a
-            >
+      <section class="about-me" id="contact-me">
+        <h1 class="text-start mt-0">Let's get in touch!</h1>
+        <div class="row">
+          <div class="col titles contact-me">
+            <h4 class="text-center get-in-touch">CONTACT</h4>
+            <div>
+              <p>
+                <i class="fa-regular fa-envelope"></i> Email<br />
+                <span
+                  ><a href="mailto:mcsanchezlaguna@gmail.com" target="_blank"
+                    >mcsanchezlaguna@gmail.com</a
+                  ></span
+                >
+              </p>
+            </div>
+            <div>
+              <p>
+                <i class="fa-solid fa-mobile-screen-button"></i> Phone<br />
+                <span>(🇪🇸+34) 648 440 317</span>
+              </p>
+            </div>
           </div>
-          <div>
-            <i class="fa-solid fa-mobile-screen-button"></i>
-            <p>(🇪🇸+34) 648 440 317</p>
-          </div>
-        </div>
-        <div class="titles">
-          <p class="text-start">Conect:</p>
-          <div>
-            <i class="fa-brands fa-linkedin-in"></i>
-            <a
-              href="https://www.linkedin.com/in/murielsanchezlaguna/"
-              target="_blank"
-              >Muriel Cristina Sánchez Laguna</a
-            >
-          </div>
-          <div>
-            <i class="fa-brands fa-instagram"></i>
-            <a href="https://www.instagram.com/muricristinapty/" target="_blank"
-              >@murielcristinapty</a
-            >
+          <div class="col titles contact-me">
+            <h4 class="text-center get-in-touch">CONECT</h4>
+            <div>
+              <p>
+                <i class="fa-brands fa-linkedin-in"></i> Linkedin<br />
+                <span>
+                  <a
+                    href="https://www.linkedin.com/in/murielsanchezlaguna/"
+                    target="_blank"
+                    >Muriel Cristina Sánchez Laguna</a
+                  ></span
+                >
+              </p>
+            </div>
+            <div>
+              <p>
+                <i class="fa-brands fa-instagram"></i> Instagram<br />
+                <span
+                  ><a
+                    href="https://www.instagram.com/muricristinapty/"
+                    target="_blank"
+                    >@murielcristinapty</a
+                  ></span
+                >
+              </p>
+            </div>
           </div>
         </div>
       </section>
