link the contact page to the others

--- a/about.html
+++ b/about.html
@@ -107,7 +107,9 @@
               </p>
             </div>
             <div>
-              <a href="#" class="btn primary-button">CONTACT ME</a>
+              <a href="/contact.html#contact-me" class="btn primary-button"
+                >CONTACT ME</a
+              >
               <a href="#" class="btn secondary-button">CV<br />Español</a>
               <a href="#" class="btn secondary-button">CV<br />English</a>
             </div>
