--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <h3>👋🏽 Hello, I am</h3>
         <h1>Muriel<br /><small>Sánchez Laguna</small></h1>
         <h2>🇵🇦 Front-end developer based in Europe</h2>
-        <a href="#" class="btn primary-button">CONTACT ME</a>
+        <a href="/contact.html#contact-me" class="btn primary-button"
+          >CONTACT ME</a
+        >
       </section>
       <section class="section-introductions">
         <a href="/index.html#featured-project"
