--- a/myprojects.html
+++ b/myprojects.html
@@ -85,7 +85,9 @@
         <h3 class="text-start mb-5">
           Discover the projects I've been passionately developing.
         </h3>
-        <a href="#" class="btn primary-button">CONTACT ME</a>
+        <a href="/contact.html#contact-me" class="btn primary-button"
+          >CONTACT ME</a
+        >
       </section>
       <!-- 1. PROYECT DISPLAY (start)-->
       <div class="projects-display">
