--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div class="w-100">
-      <nav class="fixed-top navbar navbar-expand-sm bg-body-tertiary">
+      <nav class="fixed-top navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img
@@ -56,24 +56,20 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav nav-underline">
-              >
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
-                  >Home page</a
+                <a class="nav-link" aria-current="page" href="/index.html"
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About me</a>
+                <a class="nav-link" href="/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/myprojects.html">My projects</a>
+                <a class="nav-link" href="/myprojects.html">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link active" href="/">Contact</a>
               </li>
             </ul>
           </div>
