--- a/myprojects.html
+++ b/myprojects.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div class="w-100">
-      <nav class="fixed-top navbar navbar-expand-sm bg-body-tertiary">
+      <nav class="fixed-top navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img
@@ -56,21 +56,17 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav nav-underline">
-              >
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
-                  >Home page</a
+                <a class="nav-link" aria-current="page" href="/index.html"
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About me</a>
+                <a class="nav-link" href="/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/myprojects.html">My projects</a>
+                <a class="nav-link active" href="/">Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact.html">Contact</a>
@@ -79,7 +75,6 @@
           </div>
         </div>
       </nav>
-
       <section class="about-me">
         <h1 class="text-start">My work</h1>
         <h3 class="text-start mb-5">
